updating html template to call the database

--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -6,24 +6,44 @@
   <link rel="stylesheet" href="../static/safe_eats/css/styles.css" />
 </head>
 
-<!--<input id="pac-input" class="controls" type="text"
-    placeholder="Enter a location">
-<div id="type-selector" class="controls">
-  <input type="radio" name="type" id="changetype-all">
-  <label for="changetype-all">All</label>
 
-  <input type="radio" name="type" id="changetype-establishment" checked="checked">
-  <label for="changetype-establishment">Establishments</label>
-
-  <input type="radio" name="type" id="changetype-address">
-  <label for="changetype-address">Addresses</label>
-
-  <input type="radio" name="type" id="changetype-geocode">
-  <label for="changetype-geocode">Geocodes</label>
-</div>-->
 <div id="map"></div>
 
 
 <script src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places&callback=initMap" async defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../static/safe_eats/js/API_call.js"></script>
+
+<script>
+//$(window).load(function() {
+    // Construct the catalog query string
+//     url = 'https://data.kingcounty.gov/resource/gkhn-e8mn.json?$where=inspection_date%20between%20%272015-01-01T12:00:00%27%20and%20%272016-03-22T14:00:00%27';
+    
+//     // Intialize our map
+//     var center = new google.maps.LatLng(47.608013,-122.335167);
+//     var mapOptions = {
+//       zoom: 14,
+//       center: center
+//     }
+//     var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+    
+//     // Retrieve our data and plot it
+//     $.getJSON(url, function(data, textstatus) {
+//           console.log(data);
+//           $.each(data, function(i, entry) {
+
+//       var contentString = '<div><b>'+ entry.inspection_business_name +'</b></div>'+'<div>'+ entry.address +'</div>'+'<div>'+ 'Inspection Result:  ' + entry.inspection_result +'</div>'+'<div>'+ entry.violation_description +'</div>';
+      
+//       var infowindow = new google.maps.InfoWindow({
+//         content: contentString
+//         });
+//       var marker = new google.maps.Marker({
+//         position: new google.maps.LatLng(restaurants.latitude, entry.longitude),
+//         map: map,
+//         title: entry.inspection_business_name
+//               });
+//               marker.addListener('click', function() {infowindow.open(map, marker);});
+//           });
+//     });
+// });
+</script>
