updated CSS and added comments

--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -19,8 +19,13 @@
 
 {% endblock %}
 
-<div class="footer"></div>
-
-
+<footer class="navbar-fixed-bottom navbar">
+    <p>
+    Made by Ron Shafii at PDX Code Guild with attribution to Chris Jones and Patrick McNally in 2016.
+    </p>
+</footer>
 </body>
+
+
+
 </html>
