--- a/safe_eats_app/templates/safe_eats/restaurant.html
+++ b/safe_eats_app/templates/safe_eats/restaurant.html
@@ -17,15 +17,19 @@
     Address:  <b>{{ rest_info.address }}</b>
     <br>
     <br>
+    <!-- display all reports for each restaurant-->
     {% for rep in reports %}
     </p>
     <div>
+        <!--for each inspection report display all related results-->
         <p class="bg-info">
     {{ rep.inspection_date }}<br>
         {% for x in rep.related_set %}
+            <!--if no violation description exists then print an english Satifactory result-->
             {% if x.violation_description == '' %}
                 Satisfactory<br>
                 <br>
+            <!--if a violation description exists then print all results-->
             {% else %}
             <p class="bg-warning">
             {{ x.violation_description }}<br>
