--- a/safe_eats_app/static/safe_eats/css/styles.css
+++ b/safe_eats_app/static/safe_eats/css/styles.css
@@ -1,12 +1,13 @@
 html, body {
   height: 100%;
   margin: 0px;
+  overflow: hidden;
 }
 .mainContent {
-    height: 68%;
+    height: 100%;
 }
 #map {
-  height: 100%;
+  height: 70%;
 }
 .controls {
   margin-top: 10px;
@@ -119,7 +120,29 @@ footer {
     color: #5bc0de;
 }
 
-.jumbotron{
-  
-  height: 30%;
+
+.jumbotron {
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
+}
+
+
+/* Slide Panel CSS */
+
+#slide-panel {
+  width:300px;
+  height:800px;
+  padding:10px;
+  background:#eee;
+  margin-left:-300px;
+  float: left;
+  max-width: 300px;
+}
+
+
+#content {
+  height: 500px;
+  width: 100%;
+  float: left;
+  padding-left: 5%;
 }
