--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block content %}
 
 <div class="jumbotron">
-    <div class="container">
+
     <h1>Safe Eats</h1>
-    <p>This is a Django App that showcases the Restaurant Health Inspection Reports for King County (City of Seattle) Restaurants.</br></br>
-        Click on a marker to view to a short health inspection response.</br>
-        Click on the restaurant name to view a history of reports.</p>
-    </div>
+    <p>This is a Django App that showcases the Restaurant Health Inspection Reports for King County (City of Seattle) Restaurants.
 </div>
+
+<div class="container">
+    Click on a marker to view a short health inspection response.</br>
+    Click on the restaurant name in the info window to view a history of reports.</p>
+</div>
+<div id="slide-panel"></div>
 <div class="container mainContent">
     <div id="map"></div>
+
 </div>
+
 
 <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
@@ -52,7 +58,7 @@
             map.setCenter(marker.getPosition());
 
             // content string to place in the infowindow 
-            var content = '<div><b><a href="restaurants/' + obj.bus_id + '/">' + obj.name + '</a></b></div>' + '<div>' + obj.address + '</div>' + '<div>' + 'Inspection Result:  ' + obj.results.result_1.inspection_result + '</div>' + '<div>' + obj.results.result_1.description + '</div>';
+            var content = '<div><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div>' + obj.address + '</div>' + '<div>' + 'Inspection Result:  ' + obj.results.result_1.inspection_result + '</div>' + '<div>' + obj.results.result_1.description + '</div>';
 
             var infowindow = new google.maps.InfoWindow();
             // add a click event listener when the user clicks on a marker to display the infowindow 
@@ -81,5 +87,5 @@
     }
     initialize();
 </script>
-
+<script src="{% static 'safe_eats/js/side_panel.js' %}"></script>
 {% endblock %}
