--- a/safe_eats_app/static/safe_eats/css/styles.css
+++ b/safe_eats_app/static/safe_eats/css/styles.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   margin: 0px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .mainContent {
     height: 100%;
@@ -126,6 +126,10 @@ footer {
   margin-bottom: 0px !important;
 }
 
+.infowindow {
+  color: black;
+}
+
 
 /* Slide Panel CSS */
 
@@ -133,10 +137,13 @@ footer {
   width:300px;
   height:800px;
   padding:10px;
-  background:#eee;
-  margin-left:-300px;
-  float: left;
+  /*background:#eee;*/
+  background-color: #2b3e50;
+  margin-right: -300px;
+  float: right;
   max-width: 300px;
+  z-index: 1;
+  overflow: auto;
 }
 
 
