--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -3,21 +3,18 @@
 {% block content %}
 
 <div class="jumbotron">
-
     <h1>Safe Eats</h1>
     <p>This is a Django App that showcases the Restaurant Health Inspection Reports for King County (City of Seattle) Restaurants.
 </div>
-
 <div class="container">
     Click on a marker to view a short health inspection response.</br>
     Click on the restaurant name in the info window to view a history of reports.</p>
 </div>
-<div id="slide-panel"></div>
+
 <div class="container mainContent">
+    <div id="slide-panel"></div>
     <div id="map"></div>
-
 </div>
-
 
 <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
@@ -25,6 +22,7 @@
 <script>
     var infos = [];
     var loc = {{ restaurants|safe }};
+    var slidePanelId;
 
     function initialize() {
     // create a google map and center it on the city of seattle
@@ -58,7 +56,7 @@
             map.setCenter(marker.getPosition());
 
             // content string to place in the infowindow 
-            var content = '<div><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div>' + obj.address + '</div>' + '<div>' + 'Inspection Result:  ' + obj.results.result_1.inspection_result + '</div>' + '<div>' + obj.results.result_1.description + '</div>';
+            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + obj.results.result_1.inspection_result + '</div>' + '<div class="infowindow">' + obj.results.result_1.description + '</div>';
 
             var infowindow = new google.maps.InfoWindow();
             // add a click event listener when the user clicks on a marker to display the infowindow 
