updating API query function. modifying templates to display less than 100 results on page load

--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -55,8 +55,18 @@
             });
             map.setCenter(marker.getPosition());
 
+            if (obj.results.result1) {
+                inspectionResult = obj.results.result_1.inspection_result
+                description = obj.results.result_1.description
+            } else {
+            
+            inspectionResult = "No Result"
+            description = "None"
+            }
+
+
             // content string to place in the infowindow 
-            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + obj.results.result_1.inspection_result + '</div>' + '<div class="infowindow">' + obj.results.result_1.description + '</div>';
+            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + inspectionResult + '</div>' + '<div class="infowindow">' + description + '</div>';
 
             var infowindow = new google.maps.InfoWindow();
             // add a click event listener when the user clicks on a marker to display the infowindow 
