nuked database and started over

--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -55,7 +55,7 @@
             });
             map.setCenter(marker.getPosition());
 
-            if (obj.results.result1) {
+            if (obj.results.result_1) {
                 inspectionResult = obj.results.result_1.inspection_result
                 description = obj.results.result_1.description
             } else {
