--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -7,9 +7,10 @@
         <p>This is a Django App showcasing Restaurant Health Inspection Reports for King County (City of Seattle).</p>
     </div>
 
-    <form id="searchform" method="get">
+    <form id="searchform" method="post" action="/restaurant_search/">
+        {% csrf_token %}
         <label for="name"></label>
-        <input type="text" class="form-control" name="name" placeholder="Type Restaurant Name To Search..." required/>
+        <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
         <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
     </form>
 
@@ -19,91 +20,93 @@
     </div>
     <div class="container mainContent">
         <div id="slide-panel"></div>
-        <div id="map"></div>
+        <div id="modify">
+            <div id="map"></div>
+        </div>
     </div>
 </div>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"
-            type="text/javascript"></script>
-    <!--Below we will draw a google map based on lat/long from each restaurant-->
-    <script>
-        var infos = [];
-        var loc = {{ restaurants|safe }};
-        var slidePanelId;
+<script src="http://maps.google.com/maps/api/js?sensor=false"
+        type="text/javascript"></script>
+<!--Below we will draw a google map based on lat/long from each restaurant-->
+<script>
+    var infos = [];
+    var loc = {{ restaurants|safe }};
+    var slidePanelId;
 
-        function initialize() {
-            // create a google map and center it on the city of seattle
-            var myOptions = {
-                center: new google.maps.LatLng(47.6023411, -122.3238544),
-                zoom: 10,
-                mapTypeId: google.maps.MapTypeId.ROADMAP
+    function initialize() {
+        // create a google map and center it on the city of seattle
+        var myOptions = {
+            center: new google.maps.LatLng(47.6023411, -122.3238544),
+            zoom: 10,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
 
-            };
-            var map = new google.maps.Map(document.getElementById("map"),
-                    myOptions);
+        };
+        var map = new google.maps.Map(document.getElementById("map"),
+                myOptions);
 
-            setMarkers(map, loc)
+        setMarkers(map, loc)
 
-        }
-
-
-        function setMarkers(map, loc) {
-            // create an array of markers to add to the google map
-            for (var i in loc) {
-                var obj = loc[i];
-                var name = obj.name;
-                var lat = obj.latitude;
-                var long = obj.longitude;
-                console.log(obj)
-
-                latlngset = new google.maps.LatLng(lat, long);
-                //define where to set the markers
-                var marker = new google.maps.Marker({
-                    map: map, title: name, position: latlngset
-                });
-                map.setCenter(marker.getPosition());
-
-                //display the inspection result, inspection score and description of results
-                if (obj.results.result_1) {
-                    inspectionResult = obj.results.result_1.inspection_result
-                    inspectionScore = obj.results.result_1.inspection_score
-                    description = obj.results.result_1.description
-                } else {
-
-                    inspectionResult = "No Result"
-                    inspectionScore = "None"
-                    description = "None"
-                }
+    }
 
 
-                // content string to place in the infowindow
-                var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + inspectionResult + '</div>' + '<div class="infowindow">' + 'Inspection Score:  ' + inspectionScore + '</div>' + '<div class="infowindow">' + description + '</div>';
+    function setMarkers(map, loc) {
+        // create an array of markers to add to the google map
+        for (var i in loc) {
+            var obj = loc[i];
+            var name = obj.name;
+            var lat = obj.latitude;
+            var long = obj.longitude;
+            console.log(obj)
 
-                var infowindow = new google.maps.InfoWindow();
-                // add a click event listener when the user clicks on a marker to display the infowindow
-                google.maps.event.addListener(marker, 'click', (function (marker, content, infowindow) {
-                    return function () {
-                        // close the previous info-window
-                        closeInfos();
-                        infowindow.setContent(content);
-                        infowindow.open(map, marker);
-                        // keep the handle, in order to close it on next click event
-                        infos[0] = infowindow;
-                    };
-                })(marker, content, infowindow));
+            latlngset = new google.maps.LatLng(lat, long);
+            //define where to set the markers
+            var marker = new google.maps.Marker({
+                map: map, title: name, position: latlngset
+            });
+            map.setCenter(marker.getPosition());
+
+            //display the inspection result, inspection score and description of results
+            if (obj.results.result_1) {
+                inspectionResult = obj.results.result_1.inspection_result
+                inspectionScore = obj.results.result_1.inspection_score
+                description = obj.results.result_1.description
+            } else {
+
+                inspectionResult = "No Result"
+                inspectionScore = "None"
+                description = "None"
             }
-        }
 
-        function closeInfos() {
-            if (infos.length > 0) {
-                // detach the info-window from the marker ... undocumented in the API docs
-                infos[0].set("marker", null);
-                // and close it
-                infos[0].close();
-                // blank the array
-                infos.length = 0;
-            }
+
+            // content string to place in the infowindow
+            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + inspectionResult + '</div>' + '<div class="infowindow">' + 'Inspection Score:  ' + inspectionScore + '</div>' + '<div class="infowindow">' + description + '</div>';
+
+            var infowindow = new google.maps.InfoWindow();
+            // add a click event listener when the user clicks on a marker to display the infowindow
+            google.maps.event.addListener(marker, 'click', (function (marker, content, infowindow) {
+                return function () {
+                    // close the previous info-window
+                    closeInfos();
+                    infowindow.setContent(content);
+                    infowindow.open(map, marker);
+                    // keep the handle, in order to close it on next click event
+                    infos[0] = infowindow;
+                };
+            })(marker, content, infowindow));
         }
-        initialize();
-    </script>
-    <script src="{% static 'safe_eats/js/side_panel.js' %}"></script>
+    }
+
+    function closeInfos() {
+        if (infos.length > 0) {
+            // detach the info-window from the marker ... undocumented in the API docs
+            infos[0].set("marker", null);
+            // and close it
+            infos[0].close();
+            // blank the array
+            infos.length = 0;
+        }
+    }
+    initialize();
+</script>
+<script src="{% static 'safe_eats/js/side_panel.js' %}"></script>
 {% endblock %}
