creating worst offenders map based on scores above 170. still need to add map markers with inspection results

--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -2,17 +2,27 @@
 {% load staticfiles %}
 {% block content %}
 <div class="container">
-    <div class="jumbotron">
+    <div class="page-header" id="banner">
         <h1>Safe Eats</h1>
-        <p>This is a Django App showcasing Restaurant Health Inspection Reports for King County (City of Seattle).</p>
+        <p class="lead">A Django App showcasing Restaurant Health Inspection Reports for King County (Seattle Metro).</p>
     </div>
 
+
+    <div class="panel panel-default">
+        <div class="panel-body">
     <form id="searchform" method="post" action="/restaurant_search/">
         {% csrf_token %}
         <label for="name"></label>
+        <div class="input-group">
         <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
-        <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
+        <span class="input-group-btn">
+            <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
+        </span>
+        </div>
     </form>
+        </div>
+    </div>
+    
 
     <div class="container">
         <p> Click on a marker to view a short health inspection response.</br>
