--- a/safe_eats_app/static/safe_eats/css/styles.css
+++ b/safe_eats_app/static/safe_eats/css/styles.css
@@ -146,10 +146,16 @@ footer {
   overflow: auto;
 }
 
-
 #content {
   height: 500px;
   width: 100%;
   float: left;
   padding-left: 5%;
+}
+
+/* Search Form */
+
+.form-control {
+  width: 95%;
+
 }
