building out worst offenders functionality in the template and views

--- a/safe_eats_app/templates/safe_eats/worst_offenders.html
+++ b/safe_eats_app/templates/safe_eats/worst_offenders.html
@@ -32,6 +32,7 @@ document.getElementById('modify').innerHTML = ""; //delete the existing homepage
             var lat = obj.latitude;
             var long = obj.longitude;
             console.log(obj)
+            console.log(name)
 
             latlngset = new google.maps.LatLng(lat, long);
             //define where to set the markers
