--- a/safe_eats_app/templates/safe_eats/neighborhood.html
+++ b/safe_eats_app/templates/safe_eats/neighborhood.html
@@ -1,43 +1,5 @@
-<!--document.getElementById('modify').innerHTML = ""; //delete the existing homepage map div -->
+document.getElementById('modify').innerHTML = ""; //delete the existing homepage map div
 
-{% extends "base.html" %}
-{% load staticfiles %}
-{% block content %}
-
-<div class="container">
-    <div class="page-header" id="banner">
-        <h1>Safe Eats</h1>
-        <p class="lead">A Django App showcasing Restaurant Health Inspection Reports for King County (Seattle Metro).</p>
-    </div>
-
-
-    <div class="panel panel-default">
-        <div class="panel-body">
-    <form id="searchform" method="post" action="/restaurant_search/">
-        {% csrf_token %}
-        <label for="name"></label>
-        <div class="input-group">
-        <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
-        <span class="input-group-btn">
-            <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
-        </span>
-        </div>
-    </form>
-        </div>
-    </div>
-    
-
-    <div class="container">
-        <p> Click on a marker to view a short health inspection response.</br>
-            Click on the restaurant name in the info window to view a history of reports.</p>
-    </div>
-    <div class="container mainContent">
-        <div id="slide-panel"></div>
-        <div id="modify">
-            <div id="map"></div>
-        </div>
-    </div>
-</div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
 <!--Below we will draw a google map based on lat/long from each restaurant-->
@@ -50,7 +12,7 @@
         // create a google map and center it on the city of seattle
         var myOptions = {
             center: new google.maps.LatLng(47.6023411, -122.3238544),
-            zoom: 11,
+            zoom: 17,
             mapTypeId: google.maps.MapTypeId.ROADMAP
 
         };
@@ -70,7 +32,6 @@
             var lat = obj.latitude;
             var long = obj.longitude;
             console.log(obj)
-            console.log(name)
 
             latlngset = new google.maps.LatLng(lat, long);
             //define where to set the markers
@@ -80,11 +41,20 @@
             map.setCenter(marker.getPosition());
 
             //display the inspection result, inspection score and description of results
+            if (obj.results.result_1) {
+                inspectionResult = obj.results.result_1.inspection_result
+                inspectionScore = obj.results.result_1.inspection_score
+                description = obj.results.result_1.description
+            } else {
 
+                inspectionResult = "No Result"
+                inspectionScore = "None"
+                description = "None"
+            }
 
 
             // content string to place in the infowindow
-            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + obj.inspection_result + '</div>' + '<div class="infowindow">' + 'Inspection Score:  ' + obj.inspection_score + '</div>' + '<div class="infowindow">' + obj.description + '</div>';
+            var content = '<div class="infowindow"><b><a href="#" onclick="slidePanel(\'' + obj.bus_id + '\');return false;">' + obj.name + '</a></b></div>' + '<div class="infowindow">' + obj.address + '</div>' + '<div class="infowindow">' + 'Inspection Result:  ' + inspectionResult + '</div>' + '<div class="infowindow">' + 'Inspection Score:  ' + inspectionScore + '</div>' + '<div class="infowindow">' + description + '</div>';
 
             var infowindow = new google.maps.InfoWindow();
             // add a click event listener when the user clicks on a marker to display the infowindow
@@ -113,5 +83,3 @@
     }
     initialize();
 </script>
-<script src="{% static 'safe_eats/js/side_panel.js' %}"></script>
-{% endblock %}
