--- a/safe_eats_app/templates/safe_eats/neighborhood.html
+++ b/safe_eats_app/templates/safe_eats/neighborhood.html
@@ -1,4 +1,40 @@
-document.getElementById('modify').innerHTML = ""; //delete the existing homepage map div
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block content %}
+<div class="container">
+    <div class="page-header" id="banner">
+        <h1>Safe Eats</h1>
+        <p class="lead">A Django App showcasing Restaurant Health Inspection Reports for King County (Seattle Metro).</p>
+    </div>
+
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form id="searchform" method="post" action="/restaurant_search/">
+                {% csrf_token %}
+                <label for="name"></label>
+                <div class="input-group">
+                <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
+                <span class="input-group-btn">
+                <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
+                </span>
+                </div>
+            </form>
+        </div>
+    </div>
+    
+
+    <div class="container">
+        <p> Click on a marker to view a short health inspection response.</br>
+            Click on the restaurant name in the info window to view a history of reports.</p>
+    </div>
+    <div class="container mainContent">
+        <div id="slide-panel"></div>
+        <div id="modify">
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
 
 <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
@@ -12,7 +48,7 @@ document.getElementById('modify').innerHTML = ""; //delete the existing homepage
         // create a google map and center it on the city of seattle
         var myOptions = {
             center: new google.maps.LatLng(47.6023411, -122.3238544),
-            zoom: 17,
+            zoom: 14,
             mapTypeId: google.maps.MapTypeId.ROADMAP
 
         };
@@ -83,3 +119,5 @@ document.getElementById('modify').innerHTML = ""; //delete the existing homepage
     }
     initialize();
 </script>
+<script src="{% static 'safe_eats/js/side_panel.js' %}"></script>
+{% endblock %}
