fixed selector to add multiple zip codes in one post request

--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -14,46 +14,79 @@
 </head>
 
 <body>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-  <form id="searchform" method="post" class="navbar-form navbar-left" action="/neighborhood/">
-    {% csrf_token %}
-    <div class="input-group">
-      <select name="name" class="form-control" id="select">
-        <optgroup label="Downtown Districts">
-          <option value"" disabled selected>Select a neighborhood</option>
-          <option value"98101">Downtown</option>
-          <option value"98104">Pioneer Square / Chinatown</option>
-          <option value"98121">Belltown / Denny Triangle</option>
-        <optgroup label="Neighborhoods">
-          <option value"98033">Kirkland</option>
-          <option value"98199">Magnolia</option>
-          <option value"98052">Redmond</option>
-          <option value"98109">Queen Anne</option>
-        </optgroup>
-      </select>
-
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </span>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">HOME</a>
       </div>
-  </form>
-</div>
-</div>
 
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/worst_offenders/">WORST OFFENDERS</a></li>
+        </ul>
+        <form id="searchform" method="post" class="navbar-form navbar-left" action="/neighborhood/">
+              {% csrf_token %}
+              <div class="input-group">
+                <select name="name" class="form-control" id="select">
+                  <optgroup label="Downtown Districts">
+                    <option value"" disabled selected>Select a neighborhood</option>
+                    <option value"98101">Downtown</option>
+                    <option value"98104">Pioneer Square / Chinatown</option>
+                    <option value"98121">Belltown / Denny Triangle</option>
+                  <optgroup label="Neighborhoods">
+                    <option value"98033">Kirkland</option>
+                    <option value"98199">Magnolia</option>
+                    <option value"98052">Redmond</option>
+                    <option value"98109">Queen Anne</option>
+                  </optgroup>
+                </select>
+
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </span>
+              </div>
+            </form>
+      </div>
+    </div>
+  </nav>
+
+<div class="container">
+      <div class="page-header" id="banner">
+        <h1>Safe Eats</h1>
+        <p class="lead">A Django App showcasing Restaurant Health Inspection Reports for King County (Seattle Metro).</p>
+    </div>
+
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <form id="searchform" method="post" action="/restaurant_search/">
+            {% csrf_token %}
+            <label for="name"></label>
+            <div class="input-group">
+            <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
+            <span class="input-group-btn">
+                <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
+            </span>
+            </div>
+        </form>
+        <div class="container">
+        <p> Click on a marker to view a short health inspection report.</br>
+            Click on the restaurant name in the info window to view a history of reports.</p>
+        </div>
+      </div>
+    </div>
+</div>
 {% block content %}
 
 {% endblock %}
-<!--
-<footer class="navbar-fixed-bottom navbar">
-    <p>
-    Made by Ron Shafii at PDX Code Guild with attribution to Chris Jones and Patrick McNally in 2016.
-    </p>
+
+
+<footer class="text-center">
+  <a class="up-arrow" href="/#" data-toggle="tooltip" title="" data-original-title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>Made By <a href="https://github.com/ron-s" data-toggle="tooltip" title="" data-original-title="Ron Shafii">Ron Shafii</a></p> 
 </footer>
--->
 </body>
-
-
 
 </html>
