adding more neighborhoods to selector

--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -34,10 +34,13 @@
                     <option value"98104">Pioneer Square / Chinatown</option>
                     <option value"98121">Belltown / Denny Triangle</option>
                   <optgroup label="Neighborhoods">
+                    <option value"98107">Ballard</option>
+                    <option value"98144">Beacon Hill / Mt. Baker / Leschi</option>
                     <option value"98033">Kirkland</option>
                     <option value"98199">Magnolia</option>
-                    <option value"98052">Redmond</option>
                     <option value"98109">Queen Anne</option>
+                    <option value"98052">Redmond</option>
+                    
                   </optgroup>
                 </select>
 
