--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -17,12 +17,19 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
         <a class="navbar-brand" href="/">HOME</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/worst_offenders/">WORST OFFENDERS</a></li>
+          <li><a href="/closed/">SHUTDOWN</a></li>
         </ul>
         <form id="searchform" method="post" class="navbar-form navbar-left" action="/neighborhood/">
               {% csrf_token %}
