added more neighborhoods

--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -43,10 +43,17 @@
                   <optgroup label="Neighborhoods">
                     <option value"98107">Ballard</option>
                     <option value"98144">Beacon Hill / Mt. Baker / Leschi</option>
+                    <option value"98122">Capitol Hill / Madrona</option>
                     <option value"98033">Kirkland</option>
                     <option value"98199">Magnolia</option>
                     <option value"98109">Queen Anne</option>
                     <option value"98052">Redmond</option>
+                    <option value"98004">Bellevue</option>
+                    <option value"98105">University District</option>
+                    <optgroup label="Islands">
+                    <option value"98070">Bainbridge Island / Mercer Island / Vashon Island</option>
+                    <optgroup label="West Seattle">
+                    <option value"98106">West Seattle</option>
                     
                   </optgroup>
                 </select>
