--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -40,6 +40,8 @@
             var name = obj.name;
             var lat = obj.latitude;
             var long = obj.longitude;
+            console.log(lat, long);
+
             console.log(obj)
 
             latlngset = new google.maps.LatLng(lat, long);
