--- a/safe_eats_app/templates/safe_eats/worst_offenders.html
+++ b/safe_eats_app/templates/safe_eats/worst_offenders.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<script src="http://maps.google.com/maps/api/js?sensor=false"
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyBdN4vMIoFAS4vju1DxXwz8u9UEneZTemw"
         type="text/javascript"></script>
 <!--Below we will draw a google map based on lat/long from each restaurant-->
 <script>
