--- a/safe_eats_app/templates/base.html
+++ b/safe_eats_app/templates/base.html
@@ -76,13 +76,13 @@
 
     <div class="panel panel-default">
       <div class="panel-body">
-        <form id="searchform" method="post" action="/restaurant_search/">
+        <form id="searchform" method="get" action="/restaurant_search/">
             {% csrf_token %}
             <label for="name"></label>
             <div class="input-group">
             <input type="text" class="form-control" name="name" placeholder="Restaurant Name To Search..." required/>
             <span class="input-group-btn">
-                <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
+            <input class="btn btn-info" type="submit" name="submit" id="submit" value="GO!" />
             </span>
             </div>
         </form>
