--- a/safe_eats_app/templates/safe_eats/safe_eats.html
+++ b/safe_eats_app/templates/safe_eats/safe_eats.html
@@ -9,10 +9,11 @@
         </div>
     </div>
 </div>
-<script src="http://maps.google.com/maps/api/js?sensor=false"
-        type="text/javascript"></script>
-<!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyBdN4vMIoFAS4vju1DxXwz8u9UEneZTemw"
+<!--<script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>-->
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyBdN4vMIoFAS4vju1DxXwz8u9UEneZTemw"
+        type="text/javascript"></script>
+        
 <!--Below we will draw a google map based on lat/long from each restaurant-->
 <script>
     var infos = [];
